update Idcard component

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 /*                                   ID CARD                                  */
 /* -------------------------------------------------------------------------- */
 
-#id-card{
+.id-card{
   display: flex;
   gap: 30px;
   border: 2px solid #000;
