finish greeting component

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,10 @@
   margin-bottom: 10px;
 }
 
-
+/* -------------------------------------------------------------------------- */
+/*                                  GREETING                                  */
+/* -------------------------------------------------------------------------- */
+.greeting{
+  border: 2px solid #000;
+  margin-bottom: 10px;
+}
