--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 /* -------------------------------------------------------------------------- */
 /*                                  GREETING                                  */
 /* -------------------------------------------------------------------------- */
-.greeting{
+.section-style{
   border: 2px solid #000;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
