--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,15 @@
   border: 2px solid #000;
   margin-bottom: 15px;
 }
+
+
+/* -------------------------------------------------------------------------- */
+/*                                CREDIT CARDS                                */
+/* -------------------------------------------------------------------------- */
+
+.creditCard{
+    margin: 10px;
+    padding: 20px;
+    width: 300px;
+    border-radius: 10px;
+}
